--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.13.1"
   }
 }
